# prompt-firewall

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  prompt-firewall-ci.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_negative.md  false_positive.md  feature_request.md
examples/: basic_usage.py  fastapi_integration.py  openai_proxy.py
src/prompt_firewall/: __init__.py  __main__.py  config.py  firewall.py  models.py  scanner.py
src/prompt_firewall/detectors/: __init__.py  base.py  canary.py  encoding.py  injection.py  jailbreak.py  language.py  length.py  pii.py
src/prompt_firewall/middleware/: fastapi.py  openai_proxy.py
src/prompt_firewall/rules/rules/: injection_patterns.json  jailbreak_signatures.json
tests/: test_firewall.py  test_middleware.py
tests/fixtures/: benign_prompts.json  malicious_prompts.json
tests/test_detectors/: test_encoding.py  test_injection.py  test_jailbreak.py  test_pii.py
